scripts/all-deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"s2i-chiaretto:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"s2i-chiaretto\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2025-10-25T22:03:05Z"
    generation: 3
    labels:
      app: s2i-chiaretto
      app.kubernetes.io/component: s2i-chiaretto
      app.kubernetes.io/instance: s2i-chiaretto
    name: s2i-chiaretto
    namespace: development
    resourceVersion: "253891"
    uid: 774b2736-9e30-4dc3-abef-9cf877f57311
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        deployment: s2i-chiaretto
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: s2i-chiaretto
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/development/s2i-chiaretto@sha256:1ccca271434d7c1d16133d90cc67b92c6811bece58ab8aa8ab5cd54cedc2c202
          imagePullPolicy: IfNotPresent
          name: s2i-chiaretto
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    conditions:
    - lastTransitionTime: "2025-10-25T22:03:05Z"
      lastUpdateTime: "2025-10-25T22:03:05Z"
      message: Deployment does not have minimum availability.
      reason: MinimumReplicasUnavailable
      status: "False"
      type: Available
    - lastTransitionTime: "2025-10-25T22:03:05Z"
      lastUpdateTime: "2025-10-25T22:03:57Z"
      message: ReplicaSet "s2i-chiaretto-8d9f994d8" is progressing.
      reason: ReplicaSetUpdated
      status: "True"
      type: Progressing
    observedGeneration: 3
    replicas: 2
    unavailableReplicas: 2
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "20"
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"httpd:latest","namespace":"openshift"},"fieldPath":"spec.template.spec.containers[?(@.name==\"httpd\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2025-10-25T22:03:02Z"
    generation: 26
    labels:
      app: test-app
      app.kubernetes.io/component: test-app
      app.kubernetes.io/instance: test-app
    name: test-app
    namespace: development
    resourceVersion: "253861"
    uid: 55a4bddf-3628-4406-bc76-a48065cf9ae0
  spec:
    progressDeadlineSeconds: 600
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        deployment: test-app
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: test-app
      spec:
        containers:
        - env:
          - name: DATABASE_HOST
            valueFrom:
              configMapKeyRef:
                key: database.host
                name: test-app
          - name: DATABASE_PORT
            valueFrom:
              configMapKeyRef:
                key: database.port
                name: test-app
          - name: CHAVE
            valueFrom:
              secretKeyRef:
                key: chave
                name: test-app
          - name: minhachave
            value: valor
          image: image-registry.openshift-image-registry.svc:5000/openshift/httpd@sha256:59cbb73918a853486b35817d289d0befdabc7615f91b9819bb4f92902451094a
          imagePullPolicy: IfNotPresent
          name: httpd
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources:
            limits:
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: volume-klwr2
          - mountPath: /test-app-secret
            name: volume-rnvj4
          - mountPath: /emptydir
            name: emptydir
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: test-app
          name: volume-klwr2
        - name: volume-rnvj4
          secret:
            defaultMode: 420
            secretName: test-app
        - emptyDir: {}
          name: emptydir
  status:
    availableReplicas: 3
    conditions:
    - lastTransitionTime: "2025-10-25T22:03:21Z"
      lastUpdateTime: "2025-10-25T22:03:21Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-10-25T22:03:21Z"
      lastUpdateTime: "2025-10-25T22:03:57Z"
      message: ReplicaSet "test-app-787b95cdbb" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 26
    readyReplicas: 3
    replicas: 3
    updatedReplicas: 3
kind: List
metadata:
  resourceVersion: ""
